--- a/metaphors-prepare-candidates-from-corpus.ipynb
+++ b/metaphors-prepare-candidates-from-corpus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -39,23 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-c35b98f9bb0c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0meval_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"eval-mod.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmetaphor_words\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmetaphors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "eval_data = pd.read_csv(\"eval-mod.csv\")\n",
+    "eval_data = pd.read_csv(\"eval-verb-noun.csv\")\n",
     "\n",
     "metaphor_words = []\n",
     "metaphors = {}\n",
@@ -80,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -113,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -144,11 +132,13 @@
     "            if n.dep_type != 'ROOT':\n",
     "                self.nodes[n.head].children.append(n)\n",
     "    \n",
-    "    def is_valid_meaning(self):\n",
-    "        #if self.pos in ['JJ', 'JJS', 'RB', 'VBG']:\n",
-    "        if self.pos in ['JJ', 'JJS', 'VBG']:\n",
-    "            return True\n",
-    "        return False\n",
+    "\n",
+    "def is_valid_meaning(p):\n",
+    "    #if self.pos in ['JJ', 'JJS', 'RB', 'VBG']:\n",
+    "    #if p in ['JJ', 'JJS', 'VBG']:\n",
+    "    if p in ['VBD', 'VBG', 'VBN', 'VBP', 'VBZ', 'VB']:\n",
+    "        return True\n",
+    "    return False\n",
     "    \n",
     "    \n",
     "def find_candidates_for(words, dep_corpus_folder):\n",
@@ -185,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +200,25 @@
       "processing dep_corpus/part-m-00015.gz\n",
       "processing dep_corpus/part-m-00016.gz\n",
       "processing dep_corpus/part-m-00017.gz\n",
-      "processing dep_corpus/part-m-00018.gz\n"
+      "processing dep_corpus/part-m-00018.gz\n",
+      "processing dep_corpus/part-m-00019.gz\n",
+      "processing dep_corpus/part-m-00020.gz\n",
+      "processing dep_corpus/part-m-00021.gz\n",
+      "processing dep_corpus/part-m-00022.gz\n",
+      "processing dep_corpus/part-m-00023.gz\n",
+      "processing dep_corpus/part-m-00024.gz\n",
+      "processing dep_corpus/part-m-00025.gz\n",
+      "processing dep_corpus/part-m-00026.gz\n",
+      "processing dep_corpus/part-m-00027.gz\n",
+      "processing dep_corpus/part-m-00028.gz\n",
+      "processing dep_corpus/part-m-00029.gz\n",
+      "processing dep_corpus/part-m-00030.gz\n",
+      "processing dep_corpus/part-m-00031.gz\n",
+      "processing dep_corpus/part-m-00032.gz\n",
+      "processing dep_corpus/part-m-00033.gz\n",
+      "processing dep_corpus/part-m-00034.gz\n",
+      "processing dep_corpus/part-m-00035.gz\n",
+      "processing dep_corpus/part-m-00036.gz\n"
      ]
     }
    ],
@@ -220,31 +228,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "pickle.dump(candidates, open( \"candidates.p\", \"wb\" ) )"
+    "pickle.dump(candidates, open( \"candidates-verb-noun.p\", \"wb\" ) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('good', 333), ('not', 297), ('only', 228), ('true', 116), ('loving', 102), ('alone', 98), ('same', 89), ('angry', 75), ('great', 74), ('willing', 72), ('personal', 71), (\"n't\", 70), ('dear', 70), ('alive', 68), ('almighty', 67), ('all-powerful', 65), ('dead', 61), ('real', 54), ('just', 51), ('other', 50), ('faithful', 49), ('even', 48), ('then', 47), ('no', 44), ('merciful', 43), ('powerful', 41), ('so', 39), ('ever-living', 39), ('much', 38), ('such', 37), ('perfect', 37), ('omniscient', 37), ('present', 37), ('able', 35), ('omnipotent', 35), ('new', 34), ('false', 34), ('own', 34), ('holy', 34), ('infinite', 31), ('eternal', 28), ('also', 28), ('there', 28), ('responsible', 26), ('first', 24), ('perhaps', 24), ('amazing', 23), ('jealous', 23), ('human', 23), ('particular', 21), ('now', 21), ('best', 21), ('supernatural', 21), ('different', 21), ('happy', 20), ('awful', 19), ('christian', 19), ('therefore', 19), ('awesome', 19), ('wrong', 19), ('fully', 19), ('evil', 19), ('big', 19), ('full', 18), ('beautiful', 18), ('still', 18), ('sovereign', 18), ('maybe', 17), ('well', 17), ('rather', 16), ('truly', 16), ('bad', 16), ('active', 16), ('gracious', 16), ('old', 16), ('invisible', 15), ('all-knowing', 15), ('yet', 15), ('male', 14), ('really', 14), ('sure', 14), ('necessary', 14), ('fucking', 14), ('vedic', 14), ('worthy', 14), ('cruel', 14), ('formless', 13), ('important', 13), ('indeed', 12), ('unknown', 12), ('too', 12), ('vengeful', 12), ('capable', 12), ('irrelevant', 12), ('creative', 12), ('single', 12), ('again', 12), ('small', 11), ('free', 11), ('timeless', 11), ('right', 11), ('certainly', 10), ('here', 10), ('benevolent', 10), ('incarnate', 10), ('ancient', 10), ('actually', 10), ('young', 9), ('worth', 9), ('ever', 9), ('greek', 9), ('hard', 9), ('omnipresent', 9), ('thus', 9), ('ready', 9), ('generous', 9), ('back', 9), ('busy', 8), ('mysterious', 8), ('far', 8), ('mad', 8), ('bless', 8), ('stupid', 8), ('available', 8), ('thy', 8), ('greatest', 8), ('yes', 8), ('sick', 8), ('possible', 8), ('mighty', 8), ('thankful', 8), ('superfluous', 8), ('very', 7), ('compassionate', 7), ('biblical', 7), ('high', 7), ('huge', 7), ('wrathful', 7), ('correct', 7), ('little', 7), ('wonderful', 7), ('most', 7), ('forever', 7), ('sometimes', 7), ('slow', 7), ('probably', 7), ('many', 7), ('interested', 7), ('righteous', 7), ('apart', 7), ('unnecessary', 7), ('manifest', 7), ('contingent', 7), ('hands-off', 7), ('somehow', 7), ('deistic', 6), ('second', 6), ('further', 6), ('never', 6), ('strong', 6), ('bible', 6), ('brilliant', 6), ('gorgeous', 6), ('absolute', 6), ('intelligent', 6), ('hilarious', 6), ('porcelain', 6), ('loud', 6), ('anyway', 6), ('pretty', 6), ('lucky', 6), ('common', 6), ('close', 6), ('subject', 6), ('however', 6), ('equal', 6), ('whole', 6), ('supreme', 6), ('near', 6), ('all-seeing', 6), ('unique', 6), ('specific', 6), ('always', 6), ('immortal', 6), ('absent', 6), ('mammon', 6), ('sorry', 5), ('egyptian', 5), ('cool', 5), ('next', 5), ('ashamed', 5), ('actual', 5), ('glad', 5), ('transcendent', 5), ('benign', 5), ('your', 5), ('necessarily', 5), ('surely', 5), ('monolithic', 5), ('terrible', 5)]\n"
+      "[('using', 43), ('good', 42), ('quick', 37), ('trying', 26), ('sure', 26), ('smooth', 24), ('mixed', 23), ('causing', 21), ('low', 16), ('stirring', 16), ('crazy', 16), ('making', 15), ('baking', 14), ('scraping', 12), ('going', 11), ('little', 11), ('hot', 11), ('incorporated', 10), ('thick', 10), ('cold', 9), ('frying', 9), ('much', 9), ('serving', 7), ('slanting', 7), ('giving', 7), ('dry', 7), ('big', 6), ('mixing', 6), ('cool', 6), ('soft', 6), ('cooking', 6), ('necessary', 6), ('boiling', 6), ('warm', 6), ('adding', 5), ('careful', 5), ('easy', 5), ('brown', 5), ('large', 5), ('looking', 5), ('coated', 5), ('continuing', 5), ('simple', 5), ('beginning', 5), ('icing', 4), ('small', 4), ('simmering', 4), ('creating', 4), ('unhinged', 4), ('working', 4), ('few', 4), ('white', 4), ('bubbling', 4), ('thin', 4), ('stopping', 4), ('fried', 4), ('huge', 4), ('irrational', 4), ('important', 4), ('refrigerate', 4), ('starting', 4), ('mild', 3), ('blended', 3), ('stiff', 3), ('getting', 3), ('leaving', 3), ('top', 3), ('golden', 3), ('hard', 3), ('pretty', 3), ('gentle', 3), ('ready', 3), ('afraid', 3), ('able', 3), ('topping', 3), ('helping', 3), ('allowing', 3), ('such', 3), ('lukewarm', 3), ('bring', 2), ('including', 2), ('moist', 2), ('alternating', 2), ('savory', 2), ('remaining', 2), ('possible', 2), ('putting', 2), ('translucent', 2), ('fragrant', 2), ('discussing', 2), ('pricing', 2), ('tender', 2), ('incorporating', 2), ('jalapeno', 2), ('replacing', 2), ('beating', 2), ('brewing', 2), ('free', 2), ('subconscious', 2), ('balsamic', 2), ('last', 2), ('taking', 2), ('sticky', 2), ('impossible', 2), ('bubbly', 2), ('creamy', 2), ('initial', 2), ('moistened', 2), ('golden-brown', 2), ('terrible', 2), ('solid', 2), ('likely', 2), ('final', 2), ('similar', 2), ('tangzhong', 2), ('tall', 2), ('deep', 2), ('high', 2), ('pulling', 2), ('posting', 2), ('depending', 2), ('odd', 2), ('breaking', 2), ('occasional', 2), ('nice', 2), ('coming', 2), ('puree', 2), ('saying', 1), ('tossing', 1), ('slick', 1), ('nefarious', 1), ('controversial', 1), ('ladleful', 1), ('fine', 1), ('pourable', 1), ('personal', 1), ('madman', 1), ('figuring', 1), ('homogenous', 1), ('teaching', 1), ('seasoning', 1), ('playing', 1), ('real', 1), ('flagrant', 1), ('redistributing', 1), ('sitting', 1), ('providing', 1), ('starkly', 1), ('transparent', 1), ('impressive', 1), ('garlicky', 1), ('wooden', 1), ('bluegal', 1), ('filling', 1), ('reasonable', 1), ('dangerous', 1), ('difficult', 1), ('heavy', 1), ('employing', 1), ('fair', 1), ('needless', 1), ('subsversive', 1), ('aligning', 1), ('crushing', 1), ('reduce', 1), ('recently-opened', 1), ('strongest', 1), ('unapologetic', 1), ('curious', 1), ('pale', 1), ('blonde', 1), ('subject', 1), ('splashy', 1), ('reserving', 1), ('potential', 1), ('attempting', 1), ('slide', 1), ('unable', 1), ('new', 1), ('heating', 1), ('public', 1), ('red', 1), ('measuring', 1), ('disintegrated', 1), ('slight', 1), ('minor', 1), ('outfitted', 1), ('1tbsp', 1), ('sexy', 1), ('tempering', 1), ('feeling', 1), ('many', 1), ('cupful', 1), ('according', 1), ('medium-low', 1), ('expecting', 1), ('medium-high', 1), ('whole', 1), ('requiring', 1), ('limp', 1)]\n"
      ]
     }
    ],
    "source": [
-    "print candidates['god'].most_common(200)"
+    "print candidates['stir'].most_common(200)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
