--- a/metaphors-prepare-candidates-from-corpus.ipynb
+++ b/metaphors-prepare-candidates-from-corpus.ipynb
@@ -40,7 +40,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "eval_data = pd.read_csv(\"eval-verb-noun.csv\")\n",
@@ -140,7 +142,21 @@
     "        return True\n",
     "    return False\n",
     "    \n",
-    "    \n",
+    "\n",
+    "def count_words(dep_corpus_folder):\n",
+    "    words = 0\n",
+    "    files = [f for f in os.listdir(dep_corpus_folder) if os.path.isfile(os.path.join(dep_corpus_folder, f))]\n",
+    "    for f in files:\n",
+    "        full_path = os.path.join(dep_corpus_folder, f)\n",
+    "        print \"processing\", full_path\n",
+    "        sentence = None\n",
+    "        valid = False\n",
+    "        for line in gzip.open(full_path):\n",
+    "            if len(line.strip()) > 0:\n",
+    "                words += 0\n",
+    "                \n",
+    "    print words\n",
+    "        \n",
     "def find_candidates_for(words, dep_corpus_folder):\n",
     "    candidates = {}\n",
     "    files = [f for f in os.listdir(dep_corpus_folder) if os.path.isfile(os.path.join(dep_corpus_folder, f))]\n",
