changing to Python 3

--- a/metaphors-prepare-candidates-from-corpus.ipynb
+++ b/metaphors-prepare-candidates-from-corpus.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -28,10 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "nlp = sp.load('en')"
@@ -39,19 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "eval_data = pd.read_csv(\"eval-verb-noun.csv\")\n",
+    "eval_data = pd.read_csv(\"eval-mod_ours.txt\")\n",
     "\n",
     "metaphor_words = []\n",
     "metaphors = {}\n",
     "\n",
     "for r in eval_data.iterrows():\n",
-    "    tokens = nlp(r[1][\"Metaphor\"].decode('utf-8', errors='ignore').strip().lower())\n",
+    "    #tokens = nlp(r[1][\"Metaphor\"].decode('utf-8', errors='ignore').strip().lower())\n",
+    "    tokens = nlp(r[1][\"Metaphor\"].strip().lower())\n",
     "    topic = tokens[0]\n",
     "    vehicle = tokens[-1]\n",
     "    if topic.lemma_ not in metaphor_words:\n",
@@ -70,10 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Lang:\n",
@@ -82,7 +75,7 @@
     "        self.word_count = 0\n",
     "        self.ind2word = {}\n",
     "        self.word2ind = {}\n",
-    "        for line in open(\"../glove.6B/glove.6B.300d.txt\"):\n",
+    "        for line in open(\"/Users/Kfir/Documents/corpora/glove.6B/glove.6B.300d.txt\"):\n",
     "            values = line.split(\" \")\n",
     "            v = []\n",
     "            for i in range (1, len(values)):\n",
@@ -103,10 +96,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 43,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class DepNode:\n",
@@ -148,24 +139,25 @@
     "    files = [f for f in os.listdir(dep_corpus_folder) if os.path.isfile(os.path.join(dep_corpus_folder, f))]\n",
     "    for f in files:\n",
     "        full_path = os.path.join(dep_corpus_folder, f)\n",
-    "        print \"processing\", full_path\n",
+    "        print(\"processing\", full_path)\n",
     "        sentence = None\n",
     "        valid = False\n",
     "        for line in gzip.open(full_path):\n",
     "            if len(line.strip()) > 0:\n",
     "                words += 0\n",
     "                \n",
-    "    print words\n",
+    "    print(words)\n",
     "        \n",
     "def find_candidates_for(words, dep_corpus_folder):\n",
     "    candidates = {}\n",
     "    files = [f for f in os.listdir(dep_corpus_folder) if os.path.isfile(os.path.join(dep_corpus_folder, f))]\n",
     "    for f in files:\n",
     "        full_path = os.path.join(dep_corpus_folder, f)\n",
-    "        print \"processing\", full_path\n",
+    "        print(\"processing\", full_path)\n",
     "        sentence = None\n",
     "        valid = False\n",
     "        for line in gzip.open(full_path):\n",
+    "            line = line.decode('utf-8')\n",
     "            line = line.strip()\n",
     "            if len(line) > 0 and line[0] != '#':\n",
     "                if sentence is None:\n",
@@ -191,50 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "processing dep_corpus/part-m-00000.gz\n",
-      "processing dep_corpus/part-m-00001.gz\n",
-      "processing dep_corpus/part-m-00002.gz\n",
-      "processing dep_corpus/part-m-00003.gz\n",
-      "processing dep_corpus/part-m-00004.gz\n",
-      "processing dep_corpus/part-m-00005.gz\n",
-      "processing dep_corpus/part-m-00006.gz\n",
-      "processing dep_corpus/part-m-00007.gz\n",
-      "processing dep_corpus/part-m-00008.gz\n",
-      "processing dep_corpus/part-m-00009.gz\n",
-      "processing dep_corpus/part-m-00010.gz\n",
-      "processing dep_corpus/part-m-00011.gz\n",
-      "processing dep_corpus/part-m-00012.gz\n",
-      "processing dep_corpus/part-m-00013.gz\n",
-      "processing dep_corpus/part-m-00014.gz\n",
-      "processing dep_corpus/part-m-00015.gz\n",
-      "processing dep_corpus/part-m-00016.gz\n",
-      "processing dep_corpus/part-m-00017.gz\n",
-      "processing dep_corpus/part-m-00018.gz\n",
-      "processing dep_corpus/part-m-00019.gz\n",
-      "processing dep_corpus/part-m-00020.gz\n",
-      "processing dep_corpus/part-m-00021.gz\n",
-      "processing dep_corpus/part-m-00022.gz\n",
-      "processing dep_corpus/part-m-00023.gz\n",
-      "processing dep_corpus/part-m-00024.gz\n",
-      "processing dep_corpus/part-m-00025.gz\n",
-      "processing dep_corpus/part-m-00026.gz\n",
-      "processing dep_corpus/part-m-00027.gz\n",
-      "processing dep_corpus/part-m-00028.gz\n",
-      "processing dep_corpus/part-m-00029.gz\n",
-      "processing dep_corpus/part-m-00030.gz\n",
-      "processing dep_corpus/part-m-00031.gz\n",
-      "processing dep_corpus/part-m-00032.gz\n",
-      "processing dep_corpus/part-m-00033.gz\n",
-      "processing dep_corpus/part-m-00034.gz\n",
-      "processing dep_corpus/part-m-00035.gz\n",
-      "processing dep_corpus/part-m-00036.gz\n"
+      "processing dep_corpus/part-m-00000.gz\n"
      ]
     }
    ],
@@ -282,21 +238,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
