adding resources related to the new Lena's metaphors

--- a/metaphors-prepare-candidates-from-corpus.ipynb
+++ b/metaphors-prepare-candidates-from-corpus.ipynb
@@ -39,6 +39,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Original metaphors loading\n",
+    "\n",
     "eval_data = pd.read_csv(\"eval-mod_ours.txt\")\n",
     "\n",
     "metaphor_words = []\n",
@@ -61,6 +63,31 @@
     "    else:\n",
     "        metaphors[r[1][\"Metaphor\"]][2].append((str(r[1][\"Interpretation\"]).lower(), r[1][\"Freq\"]))\n",
     "        metaphors[r[1][\"Metaphor\"]][3].append(str(r[1][\"Interpretation\"]).lower())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['man', 'ox', 'body', 'spring', 'face', 'white', 'deathmask', 'sensation', 'fever', 'face', 'land', 'ghost', 'women', 'goddess', 'pain', 'knife', 'plate', 'voice', 'shower', 'rocks', 'man', 'zombie', 'body', 'armor', 'suit', 'man', 'bull', 'man', 'pitbull', 'pit-bull', 'place', 'tomb', 'destruction', 'firework', 'swamp', 'cemetery', 'pain', 'bomb', 'life', 'chemistry', 'experiment', 'man', 'gorilla', 'place', 'museum', 'i', 'whale', 'voice', 'feather', 'body', 'bowstring', 'bird', 'marble', 'thunder', 'diamond', 'rough', 'waterfall', 'geezer', 'happiness', 'fever', 'eyes', 'steel', 'music', 'heart', 'women', 'angel', 'bottomless', 'pits', 'water', 'man', 'marble', 'statue', 'man', 'horse', 'place', 'museum', 'answer', 'viper', 'hissing', 'man', 'animal', 'man', 'rock', 'love', 'oxygen', 'apartment', 'meat', 'locker', 'culture', 'food', 'fox', 'neck', 'tree', 'trunk', 'life', 'desert', 'robot', 'cheetah', 'mule', 'wallflower', 'plan', 'house', 'cards', 'words', 'slap', 'office', 'hive', 'words', 'weapon', 'love', 'unicorn', 'woman', 'stick', 'voice', 'stone', 'toad', 'decision', 'peacock', 'furniture', 'guilt', 'truck', 'house', 'cave', 'words', 'music', 'place', 'funeral', 'news', 'shower', 'doornail', 'wisdom', 'fingerprint', 'decision', 'concrete']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Loading Lena's new metaphors\n",
+    "\n",
+    "metaphor_words = []\n",
+    "with open(\"lena_metaphors_individual_words.txt\", \"rt\") as f:\n",
+    "    for line in f.readlines():\n",
+    "        metaphor_words.append(line.strip())\n",
+    "\n",
+    "\n",
+    "print(metaphor_words)"
    ]
   },
   {
@@ -96,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,14 +210,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "processing dep_corpus/part-m-00000.gz\n"
+      "processing dep_corpus/part-m-00012.gz\n",
+      "processing dep_corpus/part-m-00026.gz\n",
+      "processing dep_corpus/part-m-00036.gz\n",
+      "processing dep_corpus/part-m-00002.gz\n",
+      "processing dep_corpus/part-m-00022.gz\n",
+      "processing dep_corpus/part-m-00006.gz\n",
+      "processing dep_corpus/part-m-00032.gz\n",
+      "processing dep_corpus/part-m-00023.gz\n",
+      "processing dep_corpus/part-m-00017.gz\n",
+      "processing dep_corpus/part-m-00007.gz\n",
+      "processing dep_corpus/part-m-00033.gz\n",
+      "processing dep_corpus/part-m-00027.gz\n",
+      "processing dep_corpus/part-m-00037.gz\n",
+      "processing dep_corpus/part-m-00003.gz\n",
+      "processing dep_corpus/part-m-00018.gz\n",
+      "processing dep_corpus/part-m-00008.gz\n",
+      "processing dep_corpus/part-m-00028.gz\n",
+      "processing dep_corpus/part-m-00038.gz\n",
+      "processing dep_corpus/part-m-00029.gz\n",
+      "processing dep_corpus/part-m-00039.gz\n",
+      "processing dep_corpus/part-m-00019.gz\n",
+      "processing dep_corpus/part-m-00009.gz\n",
+      "processing dep_corpus/part-m-00020.gz\n",
+      "processing dep_corpus/part-m-00014.gz\n",
+      "processing dep_corpus/part-m-00004.gz\n",
+      "processing dep_corpus/part-m-00030.gz\n",
+      "processing dep_corpus/part-m-00010.gz\n",
+      "processing dep_corpus/part-m-00024.gz\n",
+      "processing dep_corpus/part-m-00034.gz\n",
+      "processing dep_corpus/part-m-00000.gz\n",
+      "processing dep_corpus/part-m-00011.gz\n",
+      "processing dep_corpus/part-m-00040.gz\n",
+      "processing dep_corpus/part-m-00025.gz\n",
+      "processing dep_corpus/part-m-00035.gz\n",
+      "processing dep_corpus/part-m-00001.gz\n",
+      "processing dep_corpus/part-m-00021.gz\n",
+      "processing dep_corpus/part-m-00015.gz\n",
+      "processing dep_corpus/part-m-00005.gz\n"
      ]
     }
    ],
@@ -206,24 +270,24 @@
    },
    "outputs": [],
    "source": [
-    "pickle.dump(candidates, open( \"candidates-verb-noun.p\", \"wb\" ) )"
+    "pickle.dump(candidates, open( \"candidates-lena-metaphors.p\", \"wb\" ) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('using', 43), ('good', 42), ('quick', 37), ('trying', 26), ('sure', 26), ('smooth', 24), ('mixed', 23), ('causing', 21), ('low', 16), ('stirring', 16), ('crazy', 16), ('making', 15), ('baking', 14), ('scraping', 12), ('going', 11), ('little', 11), ('hot', 11), ('incorporated', 10), ('thick', 10), ('cold', 9), ('frying', 9), ('much', 9), ('serving', 7), ('slanting', 7), ('giving', 7), ('dry', 7), ('big', 6), ('mixing', 6), ('cool', 6), ('soft', 6), ('cooking', 6), ('necessary', 6), ('boiling', 6), ('warm', 6), ('adding', 5), ('careful', 5), ('easy', 5), ('brown', 5), ('large', 5), ('looking', 5), ('coated', 5), ('continuing', 5), ('simple', 5), ('beginning', 5), ('icing', 4), ('small', 4), ('simmering', 4), ('creating', 4), ('unhinged', 4), ('working', 4), ('few', 4), ('white', 4), ('bubbling', 4), ('thin', 4), ('stopping', 4), ('fried', 4), ('huge', 4), ('irrational', 4), ('important', 4), ('refrigerate', 4), ('starting', 4), ('mild', 3), ('blended', 3), ('stiff', 3), ('getting', 3), ('leaving', 3), ('top', 3), ('golden', 3), ('hard', 3), ('pretty', 3), ('gentle', 3), ('ready', 3), ('afraid', 3), ('able', 3), ('topping', 3), ('helping', 3), ('allowing', 3), ('such', 3), ('lukewarm', 3), ('bring', 2), ('including', 2), ('moist', 2), ('alternating', 2), ('savory', 2), ('remaining', 2), ('possible', 2), ('putting', 2), ('translucent', 2), ('fragrant', 2), ('discussing', 2), ('pricing', 2), ('tender', 2), ('incorporating', 2), ('jalapeno', 2), ('replacing', 2), ('beating', 2), ('brewing', 2), ('free', 2), ('subconscious', 2), ('balsamic', 2), ('last', 2), ('taking', 2), ('sticky', 2), ('impossible', 2), ('bubbly', 2), ('creamy', 2), ('initial', 2), ('moistened', 2), ('golden-brown', 2), ('terrible', 2), ('solid', 2), ('likely', 2), ('final', 2), ('similar', 2), ('tangzhong', 2), ('tall', 2), ('deep', 2), ('high', 2), ('pulling', 2), ('posting', 2), ('depending', 2), ('odd', 2), ('breaking', 2), ('occasional', 2), ('nice', 2), ('coming', 2), ('puree', 2), ('saying', 1), ('tossing', 1), ('slick', 1), ('nefarious', 1), ('controversial', 1), ('ladleful', 1), ('fine', 1), ('pourable', 1), ('personal', 1), ('madman', 1), ('figuring', 1), ('homogenous', 1), ('teaching', 1), ('seasoning', 1), ('playing', 1), ('real', 1), ('flagrant', 1), ('redistributing', 1), ('sitting', 1), ('providing', 1), ('starkly', 1), ('transparent', 1), ('impressive', 1), ('garlicky', 1), ('wooden', 1), ('bluegal', 1), ('filling', 1), ('reasonable', 1), ('dangerous', 1), ('difficult', 1), ('heavy', 1), ('employing', 1), ('fair', 1), ('needless', 1), ('subsversive', 1), ('aligning', 1), ('crushing', 1), ('reduce', 1), ('recently-opened', 1), ('strongest', 1), ('unapologetic', 1), ('curious', 1), ('pale', 1), ('blonde', 1), ('subject', 1), ('splashy', 1), ('reserving', 1), ('potential', 1), ('attempting', 1), ('slide', 1), ('unable', 1), ('new', 1), ('heating', 1), ('public', 1), ('red', 1), ('measuring', 1), ('disintegrated', 1), ('slight', 1), ('minor', 1), ('outfitted', 1), ('1tbsp', 1), ('sexy', 1), ('tempering', 1), ('feeling', 1), ('many', 1), ('cupful', 1), ('according', 1), ('medium-low', 1), ('expecting', 1), ('medium-high', 1), ('whole', 1), ('requiring', 1), ('limp', 1)]\n"
+      "[('restricts', 2), ('accept', 2), ('are', 2), ('goes', 2), ('wearing', 2), ('have', 2), ('breaks', 2), ('take', 2), ('lose', 1), ('loses', 1), ('equip', 1), ('put', 1), ('called', 1), ('survive', 1), ('obtain', 1), ('mitigates', 1), ('has', 1), ('sacrifice', 1), ('come', 1), ('earn', 1), ('wear', 1), ('got', 1), ('gaining', 1), ('means', 1), ('grants', 1), ('added', 1), ('was', 1), ('is', 1), ('calls', 1), ('shining', 1)]\n"
      ]
     }
    ],
    "source": [
-    "print candidates['stir'].most_common(200)"
+    "print(candidates['armor'].most_common(200))"
    ]
   },
   {
